en/4.17/_sources/supported-switch-hardware.rst.txt
=====================
Hardware Requirements
=====================

Netris Controller
=================

The Netris Controller requires at least three (for HA) Ubuntu 24.04 bare-metal servers with the specs below. HA Netris Controller can run in both air-gapped and Internet-accessible environments.

.. list-table::
   :header-rows: 0

   * - **Use Case**
     - **CPU Cores**
     - **RAM**
     - **SSD/NVME**
     - **Network**
   * - Leaf/Spine 1-100 switches
     - 8
     - 32 GB
     - 1 TB
     - 4x 25GbE+ NIC
   * - Leaf/Spine 100-300 switches
     - 16
     - 64 GB
     - 1 TB
     - 4x 25GbE+ NIC
   * - Leaf/Spine 300+ switches
     - 32
     - 128 GB
     - 2 TB
     - 4x 25GbE+ NIC
   * - Spectrum-X 1-8 SUs
     - 16
     - 64 GB
     - 1 TB
     - 4x 25GbE+ NIC
   * - Spectrum-X 16-32 SUs
     - 32
     - 128 GB
     - 2 TB
     - 4x 25GbE+ NIC
   * - Spectrum-X 32+ SUs (10K+ GPUs)
     - 64
     - 256 GB
     - 10 TB
     - 4x 25GbE+ NIC

Netris SoftGate HS (Multi-VPC version)
==========================================

A minimum of 4 dedicated servers are required for an HA (highly available) active-active SoftGate HS cluster. Two SoftGates will forward stateful traffic (SNAT), and two others will forward stateless traffic (DNAT, 1:1 NAT, Layer-4 Load Balancing, etc.) Each group (stateful and stateless) can scale horizontally by deploying more servers as CPU & RAM utilization requires.

.. csv-table:: SoftGate HS Hardware Requirements
   :file: tables/softgate-hs-hardware.csv
   :widths: 40, 40, 40, 40
   :header-rows: 0
   :align: center

.. _supported-switch-hardware:

=========================
Supported Switch Hardware
=========================

Nvidia
======

All NVIDIA Spectrum-based switches running Cumulus Linux are supported.

.. list-table::
   :header-rows: 0

   * - **Manufacturer**
     - **Series**
     - **ASIC**
     - **NOS**
     - **Supported**
   * - Nvidia
     - SN2000 Series
     - Spectrum
     - Cumulus Linux
     - ✔
   * - Nvidia
     - SN3000 Series
     - Spectrum 2
     - Cumulus Linux
     - ✔
   * - Nvidia
     - SN4000 Series
     - Spectrum 3
     - Cumulus Linux
     - ✔
   * - Nvidia
     - SN5000 Series
     - Spectrum 4
     - Cumulus Linux
     - ✔
   * - Nvidia
     - SN6000 Series
     - Spectrum 6
     - Cumulus Linux
     - ✔

Dell
======
.. list-table::
   :header-rows: 0

   * - **Manufacturer**
     - **Model**
     - **ASIC**
     - **Ports**
     - **NOS**
     - **Caveats**
     - **Supported**
   * - Dell
     - PowerSwitch E Series E3248P-ON
     - Broadcom Trident IV
     - 48x 10/100/1000MB RJ45 PoE, 4x10G SFP+, 2x100G QSFP28
     - Dell-SONiC
     -
     - ✔
   * - Dell
     - PowerSwitch E Series E3248PXE-ON
     - Broadcom Trident IV
     - 48x 1/2.5/5/10GbE RJ45 PoE, 4x25G SFP28, 2x100G QSFP28
     - Dell-SONiC
     -
     - ✔
   * - Dell
     - PowerSwitch S Series S3248T-ON
     - Broadcom Trident IV
     - 48x 10M/100M/1G RJ45, 4x10G SFP+, 2x100G QSFP28
     - Dell-SONiC
     -
     - ✔
   * - Dell
     - PowerSwitch N Series N3248P-ON
     - Broadcom Trident IV
     - 48x 10M/100M/1G RJ45 PoE, 4x10G SFP+, 2x 100G QSFP28
     - Dell-SONiC
     -
     - ✔
   * - Dell
     - PowerSwitch N Series N3248TE-ON
     - Broadcom Trident IV
     - 48x 10M/100M/1G RJ45, 4x10G SFP+, 2x 100G QSFP28
     - Dell-SONiC
     -
     - ✔
   * - Dell
     - PowerSwitch N Series N3248X-ON
     - Broadcom Trident IV
     - 48x 10M/100M/1G/2.5G/5G/10G RJ45, 4x25G SFP28, 2x 100G QSFP28
     - Dell-SONiC
     -
     - ✔
   * - Dell
     - PowerSwitch N Series N3248PXE-ON
     - Broadcom Trident IV
     - 48x 10M/100M/1G/2.5G/5G/10G RJ45, 4x25G SFP28, 2x 100G QSFP28
     - Dell-SONiC
     -
     - ✔
   * - Dell
     - PowerSwitch S Series S4348F-ON
     - Broadcom Trident III
     - 48x SFP+, 6x QSFP28
     - Dell-SONiC
     -
     - ✔
   * - Dell
     - PowerSwitch S Series S4348T-ON
     - Broadcom Trident III
     - 48x 10G RJ45, 6x QSFP28
     - Dell-SONiC
     -
     - ✔
   * - Dell
     - PowerSwitch S Series S5212F-ON
     - Broadcom Trident III
     - 12x 25G SFP28, 3x 100GbE QSFP28
     - Dell-SONiC
     -
     - ✔
   * - Dell
     - PowerSwitch S Series S5224F-ON
     - Broadcom Trident III
     - 24x 25G SFP28, 4x 100GbE QSFP28
     - Dell-SONiC
     -
     - ✔
   * - Dell
     - PowerSwitch S Series S5232F-ON
     - Broadcom Trident III
     - 32x 100GbE QSFP28
     - Dell-SONiC
     -
     - ✔
   * - Dell
     - PowerSwitch S Series S5248F-ON
     - Broadcom Trident III
     - 48x 25G SFP28, 4x 100GbE QSFP28, 2x 200GbE QSFP28
     - Dell-SONiC
     -
     - ✔
   * - Dell
     - PowerSwitch S Series S5296F-ON
     - Broadcom Trident III
     - 96x 25G SFP28, 8x 100GbE QSFP28
     - Dell-SONiC
     -
     - ✔
   * - Dell
     - PowerSwitch S Series S5448F-ON
     - Broadcom Trident IV
     - 48x QSFP-DD 100GbE, 8x QSFP-DD 400GbE
     - Dell-SONiC
     -
     - ✔
   * - Dell
     - PowerSwitch Z Series Z9264F-ON
     - Broadcom Trident IV
     - 64x 100GbE QSFP28
     - Dell-SONiC
     -
     - ✔
   * - Dell
     - PowerSwitch Z Series Z9332F-ON
     - Broadcom Trident IV
     - 32x 400GbE QSFP56-DD
     - Dell-SONiC
     -
     - ✔
   * - Dell
     - PowerSwitch Z Series Z9432F-ON
     - Broadcom Trident IV
     - 32x QSFP-DD 400GbE
     - Dell-SONiC
     -
     - ✔
   * - Dell
     - PowerSwitch Z Series Z9664F-ON
     - Broadcom Tomahawk IV
     - 64x QSFP-DD 400GbE
     - Dell-SONiC
     - Spine only [#dell-fn1]_
     - ✔
   * - Dell
     - PowerSwitch Z Series Z9864F-ON
     - Tomahawk 5
     - 64x OSFP800
     - Dell-SONiC
     - Routing VTEP only [#dell-fn2]_
     - ✔

.. [#dell-fn1] This platform's Broadcom Tomahawk IV ASIC does not support VXLAN tunnel termination under either NOS Dell currently offers for it (Dell Enterprise SONiC or SmartFabric OS10). It cannot function as a VTEP and is only suitable for a spine (underlay-only) role. This is a hardware/NOS limitation. See Dell's `Enterprise SONiC Distribution Compatibility Matrix <https://www.delltechnologies.com/asset/en-us/products/networking/technical-support/enterprise-sonic-features-and-supported-platforms-matrix.pdf>`_.

.. [#dell-fn2] This platform supports Layer-3 VXLAN routing but not Layer-2 VXLAN bridging or EVPN in Dell Enterprise SONiC. It can serve as a routed-overlay VTEP for Layer-3-only designs. Contact Netris support to confirm fit if your design requires VXLAN bridging or EVPN multihoming. This is a platform/NOS limitation. See Dell's `Enterprise SONiC Distribution Compatibility Matrix <https://www.delltechnologies.com/asset/en-us/products/networking/technical-support/enterprise-sonic-features-and-supported-platforms-matrix.pdf>`_.

EdgeCore
========
.. list-table::
   :header-rows: 0

   * - **Manufacturer**
     - **Model**
     - **ASIC**
     - **Ports**
     - **NOS**
     - **Caveats**
     - **Supported**
   * - EdgeCore
     - DCS201 (AS5835-54X)
     - Broadcom Trident III
     - 48 x 10G SFP+ + 6 x 100G QSFP28
     - EC-SONiC
     -
     - ✔
   * - EdgeCore
     - DCS202 (AS5835-54T)
     - Broadcom Trident III
     - 48 x 10G RJ-45 + 6 x 100G QSFP28
     - EC-SONiC
     -
     - ✔
   * - EdgeCore
     - DCS203 (AS7326-56X)
     - Broadcom Trident III
     - 48 x 25G SFP28 + 8 x 100G QSFP28+ 2 x 10G
     - EC-SONiC
     -
     - ✔
   * - EdgeCore
     - AS7726-32X
     - Broadcom Trident III
     - 32 x 100G QSFP28 + 2 x 10G SFP+
     - EC-SONiC
     -
     - ✔
   * - EdgeCore
     - DCS510 (AS9716-32D)
     - Broadcom Tomahawk 3
     - 32 x 400G QSFP-DD
     - EC-SONiC
     - Contact Netris support [#edgecore-fn1]_
     - ✔
   * - EdgeCore
     - DCS511 (AS9737-32DB)
     - Broadcom Tomahawk 4
     - 32 x 400G QSFP56-DD
     - EC-SONiC
     -
     - ✔
   * - EdgeCore
     - AIS800-64O
     - Broadcom Tomahawk 5
     - 64 x OSFP800
     - EC-SONiC
     -
     - ✔

.. [#edgecore-fn1] EdgeCore's published platform documentation does not clearly confirm VXLAN/VTEP support for this platform. Contact Netris support before deploying this switch in a leaf/VTEP role. See EdgeCore's `DCS510 (AS9716-32D) datasheet <https://www.edge-core.com/wp-content/uploads/2026/07/2026-042-DCS510_AS9716-32D-DS-R11-20260709.pdf>`_.

Arista
========
.. list-table::
   :header-rows: 0

   * - **Manufacturer**
     - **Model**
     - **ASIC**
     - **Ports**
     - **NOS**
     - **Caveats**
     - **Supported**
   * - Arista
     - 7020R
     - Qumran
     - 24 x 10G + 2 QSFP100; 32 x 10G + 2 QSFP100; 48 x 100/1000Mb + 6 SFP+; 48 x 100/1000Mb + 6 SFP+
     - EOS
     -
     - ✔
   * - Arista
     - 7050X3
     - Broadcom Trident III
     - 32 x QSFP100; 48 x SFP25 + 12 x QSFP100; 48 x SFP25 + 8 x QSFP100; 48 x 10G-T + 8 x QSFP100
     - EOS
     -
     - ✔
   * - Arista
     - 7050X4
     - Trident-4
     - 32 QSFP-DD 400G + 2SFP+; 32 OSFP 400G + 2SFP+; 48 SFP-DD 100G + 8 QSFP-DD 400G; 48 DSFP 100G + 8 QSFP-DD 400G; 24 QSFP56 200G + 8 QSFP-DD 400G + 2SFP+; 48 QSFP28 + 8 QSFP-DD 400G + 2SFP+
     - EOS
     -
     - ✔
   * - Arista
     - 7060X4
     - Trident-4
     - 32 x QSFP-DD 800G + 2 x SFP+; 32 x QSFP-DD 800G + 2 x SFP+; 32 x OSFP 800G + 2 x SFP+; 64 x QSFP-DD 400G, 2 x SFP+; 32 x QSFP-DD + 1x SFP+; 56x QSFP100, 8 x QSFP-DD 400G + 1x SFP+
     - EOS
     -
     - ✔
   * - Arista
     - 7060X5
     - Tomahawk 4
     - 32 x QSFP-DD 800G + 2x SFP+; 32 x QSFP-DD 800G + 2x SFP+; 32 x OSFP 800G + 2x SFP+; 64 x QSFP-DD 400G + 2x SFP+; 32 x QSFP-DD + 1 x SFP+; 56x QSFP100, 8 x QSFP-DD 400G, 1x SFP+
     - EOS
     -
     - ✔
   * - Arista
     - 7060X6-32PE
     - Tomahawk 5
     - 32 x 800G OSFP
     - EOS
     - Bridging VTEP only [#arista-fn1]_
     - ✔
   * - Arista
     - 7060X6-64PE
     - Tomahawk 5
     - 64 x 800G OSFP + 2 x SFP+
     - EOS
     - Bridging VTEP only [#arista-fn1]_
     - ✔
   * - Arista
     - 7280R3
     - Jericho2
     - 24 x 400G; 96 x 100G; 25G + 8 x 100G
     - EOS
     -
     - ✔
   * - Arista
     - 7280R3A
     - Jericho2
     - 144 x 100G or 36 x 400G
     - EOS
     -
     - ✔
   * - Arista
     - 7280R4
     - Jericho3+
     - Up to 32 x 800G
     - EOS
     -
     - ✔
   * - Arista
     - 7300R3
     - Trident-4
     - 256 wire-speed 40GbE ports
     - EOS
     -
     - ✔
   * - Arista
     - 7358X4
     - Trident-4
     - 128 x QSFP or 32 x OSFP / QSFP-DD
     - EOS
     -
     - ✔
   * - Arista
     - 7368X4
     - Tomahawk 3
     - 128 x 100G or 32 x 400G
     - EOS
     - Contact Netris support [#arista-fn2]_
     - ✔
   * - Arista
     - 7500R3
     - Jericho, Jericho2
     - Up to 288 wire-speed 400G ports
     - EOS
     -
     - ✔
   * - Arista
     - 7700R4
     - Jericho3-AI
     - Per leaf: 18 x 800G host + 20 x 800G fabric (AI distributed Etherlink fabric, not a general leaf/spine switch)
     - EOS
     -
     - ✔

.. [#arista-fn1] Current Arista EOS releases on this platform support VXLAN bridging but not VXLAN routing, per Arista's published datasheet. It can serve as a bridging-only VTEP. Contact Netris support if your design requires EVPN/VXLAN routing. This is a platform/NOS limitation. See Arista's `7060X6 Series datasheet <https://www.arista.com/assets/data/pdf/Datasheets/7060X6-Datasheet.pdf>`_.

.. [#arista-fn2] Arista's published documentation does not clearly confirm VXLAN/VTEP support for this platform. Contact Netris support before deploying this switch in a leaf/VTEP role. See Arista's `7368X4 datasheet <https://www.arista.com/assets/data/pdf/Datasheets/7368X4-Datasheet.pdf>`_.
